--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,36 +1,39 @@
 spring:
+  application:
+    name: api-gateway
+
   cloud:
     gateway:
-      routes: # <--- Aquí comienza la lista de definiciones de ruta
-        - # <--- Esta es la primera definición de ruta en la lista (para equipos)
-          id: equipos-route
-          uri: http://localhost:8081/ # Destino
+      routes:
+        - id: equipos-route
+          uri: lb://equipo                        # <– cambia aquí
           predicates:
-            - Path=/equipos/** # Condición
+            - Path=/equipos/**
           filters:
-            - StripPrefix=1 # Filtro
+            - StripPrefix=1
 
-        - # <--- Esta es la segunda definición de ruta en la lista (para entrenadores)
-          id: entrenadores-route
-          uri: http://localhost:8082/ # Destino
+        - id: entrenadores-route
+          uri: lb://entrenadores                  # <– y aquí
           predicates:
-            - Path=/entrenadores/** # Condición
+            - Path=/entrenadores/**
           filters:
-            - StripPrefix=1 # Filtro
+            - StripPrefix=1
 
-        - # <--- Esta es la segunda definición de ruta en la lista (para miembros)
-          id: miembros-route
-          uri: http://localhost:8083/ # Destino
+        - id: miembros-route
+          uri: lb://miembros                      # <– y aquí
           predicates:
-            - Path=/miembros/** # Condición
+            - Path=/miembros/**
           filters:
             - RewritePath=/miembros/(?<remaining>.*), /api/miembro/${remaining}
-        
-        - # <--- Esta es la segunda definición de ruta en la lista (para clases)
-          id: clase-route
-          uri: http://localhost:8084/ # Destino
-          predicates:
-            - Path=/clase/** # Condición
-          filters:
-            - StripPrefix=1 # Filtro
 
+        - id: clase-route
+          uri: lb://clase                         # <– y aquí
+          predicates:
+            - Path=/clase/**
+          filters:
+            - StripPrefix=1
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
